--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sohbetod | Ultimate Edition</title>
+    
+    <title>Sohbetod | Şifreli, Güvenli ve Hızlı Mesajlaşma</title>
+    <meta name="description" content="Sohbetod ile ücretsiz şifreli odalar oluşturun, sesli notlar gönderin ve arkadaşlarınızla güvenli sohbet edin.">
+    <meta name="keywords" content="sohbetod, sohbet odası, şifreli mesajlaşma, sesli mesaj, güvenli chat">
+    <meta name="author" content="Yunus Izzeddin Güder">
+
+    <meta name="google-site-verification" content="BURAYA_KODUNUZU_YAPISTIRIN" />
+
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         :root { --primary: #6366f1; --secondary: #a855f7; --glass: rgba(255, 255, 255, 0.92); --bg: linear-gradient(135deg, #6366f1 0%, #a855f7 100%); }
@@ -270,4 +277,5 @@
     window.exitPrivate = () => { loadChat(`rooms/${myRoom}/msgs`, `#${myRoom}`); document.getElementById("back-btn").style.display="none"; };
 </script>
 </body>
+
 </html>
