--- a/index.html
+++ b/index.html
@@ -151,16 +151,18 @@
     import { getDatabase, ref, push, onChildAdded, onValue, set, update, remove, get, onChildChanged, onDisconnect, onChildRemoved } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-database.js";
     import { getAuth, signInWithPopup, GoogleAuthProvider, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
 
-    // 2. Firebase Yapılandırması (Lütfen apiKey kısmını kendi Firebase panelinden doldur)
+   // Firebase Yapılandırması (Senin paylaştığın bilgilerle güncellendi)
     const firebaseConfig = { 
-        apiKey: "AIzaSy...", // Kendi API Key'ini buraya yapıştır
+        apiKey: "AIzaSyCqhaA5yE-V_88mNovVQHOC9k90hsrUYVM",
         authDomain: "sohbet-1e450.firebaseapp.com",
         databaseURL: "https://sohbet-1e450-default-rtdb.europe-west1.firebasedatabase.app",
         projectId: "sohbet-1e450",
-        storageBucket: "sohbet-1e450.appspot.com",
-        messagingSenderId: "...",
-        appId: "..."
+        storageBucket: "sohbet-1e450.firebasestorage.app",
+        messagingSenderId: "339709433578",
+        appId: "1:339709433578:web:847062b4f5f7e07633e993",
+        measurementId: "G-TPLTJ2YXRM"
     };
+
 
     const app = initializeApp(firebaseConfig);
     const db = getDatabase(app);
@@ -366,6 +368,7 @@
 </body>
 
 </html>
+
 
 
 
