Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
 </script>
 </head>
 <body>
-    <div id="login-screen" style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh;">
-    <h2 style="font-family: 'Outfit', sans-serif;">Sohbetod'a Hoş Geldiniz</h2>
-    <button id="google-login-btn" style="padding: 10px 20px; border-radius: 8px; border: 1px solid #ddd; background: white; cursor: pointer; display: flex; align-items: center; gap: 10px;">
+    <div id="login-screen" style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100vh; background: #f8fafc; text-align: center; font-family: 'Outfit', sans-serif;">
+    <h1 style="color: #1e293b; margin-bottom: 10px;">Sohbetod</h1>
+    <p style="color: #64748b; margin-bottom: 30px;">Güvenli giriş yapmak için Google hesabınızı kullanın.</p>
+    
+    <button id="google-login-btn" style="padding: 12px 24px; border-radius: 12px; border: 1px solid #e2e8f0; background: white; cursor: pointer; display: flex; align-items: center; gap: 12px; font-weight: 600; box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1); transition: all 0.2s; font-size: 16px;">
         <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="20">
         Google ile Giriş Yap
     </button>
@@ -368,6 +370,7 @@
 </body>
 
 </html>
+
 
 
 
